--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,6 @@
 *{
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        outline: none;
 }
 
 
@@ -35,8 +36,84 @@
 }
 
 .first-line{
+    margin-top: 36px;
     margin-left: 60px;
     /* padding: 1px; */
     font-size: 28px;
     font-weight: 600;
 }
+
+.cards{
+    display: flex;
+    margin-top: 35px;
+    margin-left: 25px;
+}
+
+.second-line{
+    margin-top: 50px;
+    margin-left: 60px;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.container{
+    margin-top: 40px;
+    margin-left: 62px;
+    width: 80%;
+}
+
+.upper-fields{
+    display: flex;
+    justify-content: space-between;
+}
+
+input{
+    font-weight: 600;
+    border: none;
+    border-bottom: 2px solid rgb(223, 221, 221);
+    font-size: 18px;
+}
+
+.upper-fields>input{
+    width: 40%;
+}
+
+.upper-fields>input>::placeholder{
+    color: rgb(161, 160, 160);
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.lower-field{
+    margin-top: 40px;
+}
+
+.lower-field>input{
+    width: 100%;
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    margin-top: 75px;
+}
+
+.button>button{
+    background-color: #FFF200;
+    border: 1px solid #FFF200;
+    border-radius: 30px;
+    color: black;
+    width: 80%;
+    padding: 15px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.third-line{
+    display: flex;
+    justify-content: center;
+    color: grey;
+    margin-top: 70px;
+}
+
+
