--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -84,6 +84,32 @@ input{
     font-size: 25px;
 }
 
+.code-search-input{
+    display: flex;
+background-color: white;
+border-bottom:  2px solid rgb(223, 221, 221);
+}
+
+.code-search-input>input{
+    border: none;
+}
+
+.search-icon{
+    color: rgb(36, 173, 227);
+}
+
+.result{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
+.result-list{
+    display: flex;
+}
+
 .lower-field{
     margin-top: 40px;
 }
