--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -65,6 +65,8 @@
 .upper-fields{
     display: flex;
     justify-content: space-between;
+    
+    width: 100%;
 }
 
 input{
@@ -74,9 +76,10 @@ input{
     font-size: 18px;
 }
 
-.upper-fields>input{
+/* .upper-fields>input{
     width: 40%;
-}
+    
+} */
 
 .upper-fields>input>::placeholder{
     color: rgb(161, 160, 160);
@@ -84,10 +87,17 @@ input{
     font-size: 25px;
 }
 
+.code-search{
+    position: relative;
+    width: 50%;
+}
+
 .code-search-input{
     display: flex;
+    justify-content: space-between;
 background-color: white;
 border-bottom:  2px solid rgb(223, 221, 221);
+/* position: relative */
 }
 
 .code-search-input>input{
@@ -98,17 +108,57 @@ border-bottom:  2px solid rgb(223, 221, 221);
     color: rgb(36, 173, 227);
 }
 
+.flag-code{
+    display: flex;
+    justify-content: center;
+}
+
 .result{
+    padding: 0px;
     background-color: white;
     display: flex;
     flex-direction: column;
-    max-height: 300px;
+    max-height: 200px;
     overflow-y: scroll;
+    position: absolute;
+    width: 100%;
+   /* border: none; */
 }
+
+/* .result2{
+ border: 1px solid #ccc;
+    border-top: none;
+    box-shadow: 0px 0px 5px;
+} */
 
 .result-list{
     display: flex;
+    cursor: pointer;
 }
+
+.result-list:hover{
+    background-color: rgb(223, 221, 221);
+}
+
+.result-list>img{
+    
+  /* width: 40px;
+  height: 19px; */
+    /* border:   1px solid #D9D9D9; */
+    /* margin: auto; */
+    /* padding: 5px; */
+    object-fit: contain;
+}
+
+.result-list>p{
+    font-weight: 500;
+    font-size: 15px;
+    margin-left: 10px;
+}
+
+/* .result-list-details{
+    display: flex;
+} */
 
 .lower-field{
     margin-top: 40px;
@@ -125,6 +175,7 @@ border-bottom:  2px solid rgb(223, 221, 221);
 }
 
 .button>button{
+    cursor: pointer;
     background-color: #FFF200;
     border: 1px solid #FFF200;
     border-radius: 30px;
