--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -74,6 +74,7 @@ input{
     border: none;
     border-bottom: 2px solid rgb(223, 221, 221);
     font-size: 18px;
+    width: 100%;
 }
 
 /* .upper-fields>input{
@@ -81,11 +82,11 @@ input{
     
 } */
 
-.upper-fields>input>::placeholder{
+/* .upper-fields>input>::placeholder{
     color: rgb(161, 160, 160);
     font-weight: bold;
     font-size: 25px;
-}
+} */
 
 .code-search{
     position: relative;
@@ -97,6 +98,7 @@ input{
     justify-content: space-between;
 background-color: white;
 border-bottom:  2px solid rgb(223, 221, 221);
+margin-top: -10px;
 /* position: relative */
 }
 
@@ -106,6 +108,7 @@ border-bottom:  2px solid rgb(223, 221, 221);
 
 .search-icon{
     color: rgb(36, 173, 227);
+    margin-top: 10px;
 }
 
 .flag-code{
@@ -113,7 +116,18 @@ border-bottom:  2px solid rgb(223, 221, 221);
     justify-content: center;
 }
 
-.result{
+.phone-number>input::-webkit-outer-spin-button,
+.phone-number>input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
+.phone-number>input::placeholder{
+    font-size: 18px;
+    color: rgb(146, 144, 144);
+}
+
+
+/* .result{
     padding: 0px;
     background-color: white;
     display: flex;
@@ -122,8 +136,8 @@ border-bottom:  2px solid rgb(223, 221, 221);
     overflow-y: scroll;
     position: absolute;
     width: 100%;
-   /* border: none; */
-}
+ 
+} */
 
 /* .result2{
  border: 1px solid #ccc;
@@ -131,43 +145,42 @@ border-bottom:  2px solid rgb(223, 221, 221);
     box-shadow: 0px 0px 5px;
 } */
 
-.result-list{
+/* .result-list{
     display: flex;
     cursor: pointer;
 }
 
 .result-list:hover{
     background-color: rgb(223, 221, 221);
-}
+} */
 
-.result-list>img{
+/* .result-list>img{
     
-  /* width: 40px;
-  height: 19px; */
-    /* border:   1px solid #D9D9D9; */
-    /* margin: auto; */
-    /* padding: 5px; */
+  
     object-fit: contain;
-}
+} */
 
-.result-list>p{
+/* .result-list>p{
     font-weight: 500;
     font-size: 15px;
     margin-left: 10px;
-}
+} */
 
 /* .result-list-details{
     display: flex;
 } */
 
 .lower-field{
-    margin-top: 40px;
+    margin-top: 60px;
 }
 
 .lower-field>input{
     width: 100%;
 }
 
+.datePicker{
+    width: 100%;
+}
 .button{
     display: flex;
     justify-content: center;
