--- a/src/components/Receiver/ReceiverDetails.css
+++ b/src/components/Receiver/ReceiverDetails.css
@@ -80,6 +80,45 @@
     display: flex;
     /* border-bottom:  2px solid rgb(223, 221, 221); */
 }
+.code-result{
+    position: relative;
+}
+
+.result{
+    padding: 0px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    max-height: 200px;
+    overflow-y: scroll;
+    position: absolute;
+    width: 100%;
+ 
+}
+
+.result2{
+ border: 1px solid #ccc;
+    border-top: none;
+    box-shadow: 0px 0px 5px;
+}
+
+.result-list{
+    display: flex;
+    cursor: pointer;
+}
+
+.result-list:hover{
+    background-color: rgb(223, 221, 221);
+}
+
+
+
+.result-list>p{
+    font-weight: 500;
+    font-size: 15px;
+    margin-left: 10px;
+}
+
 .mobile-number{
     width: 55%;
 }
