--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,16 +12,31 @@
 }
 
 .navbar-div>ul{
-    color: white;
+    /* color: white; */
     display: flex;
-    margin-right: 50px;
+    /* margin-right: 50px; */
 }
 
 .navbar-div>ul>li{
-    padding: 20px;
+    
     list-style-type: none;
+}
+
+.navbar-div>ul>li>a{
+    display: block;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
     text-decoration: none;
+    color: white;
     font-weight: 500;
     font-size: 18px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar{
+        
+    }
+    
 }
