--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,9 +11,17 @@
     padding: 20px;
 }
 
+.navbar-div{
+    width: 45%;
+    display: flex;
+    align-items: center;
+}
+
 .navbar-div>ul{
     /* color: white; */
+    width: 100%;
     display: flex;
+    justify-content: end;
     /* margin-right: 50px; */
 }
 
