--- a/src/components/Otp/OtpPage.css
+++ b/src/components/Otp/OtpPage.css
@@ -14,9 +14,11 @@
 }
 
 .code-container{
+
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: start;
+    width: 100%;
     margin: 60px 0px;
 }
 
@@ -26,7 +28,7 @@
     border: none;
     border-bottom: 2px solid  rgb(223, 221, 221);
     font-size: 30px;
-    width: 90px;
+    width: 90%;
     height: 80px;
     margin: 10px;
     text-align: center;
@@ -78,3 +80,25 @@
     font-weight: 600;
     font-size: 18px;
 }
+@media screen and (max-width: 992px) {
+    .code-container{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 90%;
+        margin: 60px 0px;
+    }
+
+    .code{
+        caret-color: transparent;
+        background-color: white;
+        border: none;
+        border-bottom: 2px solid  rgb(223, 221, 221);
+        font-size: 30px;
+        width: 70%;
+        height: 80px;
+        margin: 10px;
+        text-align: center;
+        font-weight: 300;
+    }
+  }
