--- a/src/components/Otp/OtpPage.css
+++ b/src/components/Otp/OtpPage.css
@@ -81,6 +81,15 @@
     font-size: 18px;
 }
 @media screen and (max-width: 992px) {
+    .first-para{
+        font-weight: 700;
+        font-size: 27px;
+    }
+    
+    .second-para{
+        font-weight: 600;
+        font-size: 20px;
+    }
     .code-container{
         display: flex;
         align-items: center;
@@ -94,11 +103,30 @@
         background-color: white;
         border: none;
         border-bottom: 2px solid  rgb(223, 221, 221);
-        font-size: 30px;
+        font-size: 20px;
         width: 70%;
-        height: 80px;
+        height: 20px;
         margin: 10px;
         text-align: center;
         font-weight: 300;
+    }
+
+    .submit-button{
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        margin-top: 40px;
+    }
+
+    .submit-button>button{
+        width: 95%;
+        cursor: pointer;
+        background-color: #FFF200;
+        border: 1px solid #FFF200;
+        border-radius: 30px;
+        color: black;
+        padding: 9px;
+        font-weight: 600;
+        font-size: 15px;
     }
   }
