--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,50 +1,152 @@
-.navbar{
+.nav-container{
     display: flex;
-    justify-content: space-between;
+    width: 100%;
     background-color: black;
+}
+ 
+.nav-container-inner-div{
+    display: none;
+}
+ 
+.image-logo-div{
     width: 100%;
-    height: 100px;
 }
-
-.logo{
-    width: 300px;
-    padding: 20px;
-}
-
-.navbar-div{
-    width: 45%;
-    display: flex;
-    align-items: center;
-}
-
-.navbar-div>ul{
-    /* color: white; */
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    /* margin-right: 50px; */
-}
-
-.navbar-div>ul>li{
-    
-    list-style-type: none;
-}
-
-.navbar-div>ul>li>a{
+ 
+.image-header{
     display: block;
-    padding: 0.5rem;
-    margin: 0 0.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    font-size: 18px;
-    cursor: pointer;
+    width: 250px;
+    max-width: 100%;
+    margin: auto;
 }
-
-@media screen and (max-width: 600px) {
-    /* .navbar{
-        
-    } */
-    
+ 
+.vl{
+    display: none;
+    border-left: 1px solid white;
+  }
+ 
+.dollar-genenral-div{
+    width: 100%;
+    text-align: center;
+}
+ 
+.dollar-general-header{
+    width: 200px;
+    max-width: 100%;
+    margin: auto;
+}
+ 
+.nav-content-div{
+    display: none;
+    width: 100%;
+    color: white;
+}
+ 
+.home-text-para{
+    width: 50px;
+    margin: auto;
+    font-weight: 500;
+    font-size: large;
+    margin-right: 5%;
+}
+ 
+.find-locations-para{
+    width: 150px;
+    font-weight: 500;
+    font-size: large;
+}
+ 
+ 
+.menu-item-div{
+    color: white;
+    width: 50px;
+    margin: 0 auto;
+    margin-right: 0%;
+    cursor: pointer;
+    z-index: 9999;
+}
+ 
+.menu-icon-header{
+    height: 100%!important;
+    width: 100%!important;
+}
+ 
+ 
+.navbar-close{
+    display: none;
+}
+ 
+.navlink-open p{
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+}
+ 
+.navlink-open{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    position: fixed;
+    right: 1%;
+}
+ 
+.home-text{
+    margin-left: 3%;
+    margin-right: 15%;
+}
+ 
+.wu-small-logo-div{
+    display: block;
+}
+ 
+.wu-small-logo{
+    width: 100px;
+}
+ 
+@media (min-width:1201px){
+ 
+    .wu-small-logo-div{
+        display: none;
+    }
+ 
+    .menu-item-div{
+        display: none;
+    }
+   
+    .nav-container-inner-div{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+   
+    .image-logo-div{
+        text-align: center;
+        margin: auto;
+    }
+   
+    .image-header{
+        width: 90%;
+    }
+   
+    .vl{
+        display: block;
+        border-left: 2px solid white;
+      }
+   
+    .dollar-genenral-div{
+        text-align: left;
+        margin: auto;
+    }
+   
+    .dollar-general-header{
+        display: block;
+        width: 50%;
+        margin-left: 5%;
+    }
+   
+    .nav-content-div{
+        display: flex;
+        flex-direction: row;
+    }
+   
+ 
 }
