--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -44,6 +44,7 @@
 }
 
 .cards{
+    width: 100%;
     display: flex;
     margin-top: 35px;
     margin-left: 25px;
@@ -210,7 +211,7 @@ margin-top: -10px;
     margin-top: 70px;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 700px){
     .upper-box{
         display: flex;
         flex-direction: column;
