--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -303,3 +303,40 @@
     height: 278%;
   }
 }
+
+@media screen and (max-width: 700px){
+  .money-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    margin-top: 40px;
+    
+  }
+
+  .sender-money-details{
+    width: 50%;
+  }
+
+  .receiver-money-details{
+    width: 50%;
+  }
+
+  .promo-code{
+    /* display: flex;
+    justify-content: center; */
+    margin: auto;
+    background-color: rgb(240, 235, 235);
+    width: 50%;
+    padding: 0px 10px;
+    margin-top: 50px;
+    /* margin-bottom: 10px; */
+    border-radius: 5px;
+  }
+  .country-list {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px; /* Adjust the gap as needed */
+  }
+}
